AI Photo Enhancer & Avatar Creator with Y2K design and Display typography
• Built complete mobile app UI with 5 main screens (Home, Enhance, Avatar, Filters, Gallery)
• Implemented Y2K aesthetic with neon colors, gradients, and futuristic styling
• Used Orbitron and Exo Google Fonts for Display typography
• Created tab-based navigation with interactive elements
• Added beautiful gradient buttons, blur effects, and proper spacing
• Designed fully responsive layout with mobile-first approach
• Implemented mock data and placeholder functionality for all features

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/exo": "^0.4.0",
+    "@expo-google-fonts/orbitron": "^0.4.0",
+    "@expo-google-fonts/space-mono": "^0.4.0",
     "@expo/vector-icons": "^14.0.2",
     "@lucide/lab": "^0.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
